[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/fontTitle.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/fontMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main Menu/SettingsMenu.gd" type="Script" id=3]
[ext_resource path="res://Main Menu/MenuBackground.tscn" type="PackedScene" id=4]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" parent="." instance=ExtResource( 4 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 612.0
margin_bottom = 486.0

[node name="Graphics" type="Button" parent="Buttons"]
margin_right = 563.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Select Graphics"
flat = true
align = 0

[node name="UserFolder" type="Button" parent="Buttons"]
margin_top = 95.0
margin_right = 563.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 2 )
text = "Open User Folder"
flat = true
align = 0

[node name="Back" type="Button" parent="Buttons"]
margin_top = 190.0
margin_right = 563.0
margin_bottom = 281.0
custom_fonts/font = ExtResource( 2 )
text = "Back to Menu"
flat = true
align = 0

[node name="ListPopup" type="PopupMenu" parent="."]
margin_left = 781.0
margin_top = 262.0
margin_right = 1894.0
margin_bottom = 1058.0
custom_fonts/font = ExtResource( 2 )

[connection signal="button_up" from="Buttons/Graphics" to="." method="_on_Graphics_button_up"]
[connection signal="pressed" from="Buttons/UserFolder" to="." method="_on_UserFolder_pressed"]
[connection signal="button_up" from="Buttons/Back" to="." method="_on_Back_button_up"]
[connection signal="id_pressed" from="ListPopup" to="." method="_on_PopupMenu_id_pressed"]
